--- a/countdown.html
+++ b/countdown.html
@@ -3,13 +3,13 @@
 <head>
     <meta charset="UTF-8">
     <title>活动倒计时</title>
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="countdown.css">
 </head>
 <body>
     <div class="countdown-container">
         <div class="event-end-time">活动结束时间: <span id="endTime">1735128000</span></div>
         <div class="time-left">距离活动结束还有: <span id="timeLeft">1735128000</span></div>
     </div>
-    <script src="script.js"></script>
+    <script src="countdown.js"></script>
 </body>
 </html>
