--- a/countdown.html
+++ b/countdown.html
@@ -6,10 +6,8 @@
     <link rel="stylesheet" href="countdown.css">
 </head>
 <body>
-    <div class="countdown-container">
-        <div class="event-end-time">活动结束时间: <span id="endTime">1735128000</span></div>
-        <div class="time-left">距离活动结束还有: <span id="timeLeft">1735128000</span></div>
-    </div>
+    <div class="event-end-time">活动结束时间: <span id="endTime">您的浏览器似乎不太支持</span></div>
+    <div class="time-left">距离活动结束还有: <span id="timeLeft">您的浏览器似乎不太支持</span></div>
     <script src="countdown.js"></script>
 </body>
 </html>
