--- a/countdown.html
+++ b/countdown.html
@@ -6,9 +6,10 @@
     <link rel="stylesheet" href="countdown.css">
 </head>
 <body>
-    <div class="event-end-time">活动结束时间: <span id="endTime">您的浏览器似乎不太支持</span></div>
-    <br>
-    <div class="time-left">距离活动结束还有: <span id="timeLeft">您的浏览器似乎不太支持</span></div>
+    <div class="countdown-container">
+        <div class="event-end-time">活动结束时间: <span id="endTime">您的浏览器似乎不太支持</span></div>
+        <div class="time-left">距离活动结束还有: <span id="timeLeft">您的浏览器似乎不太支持</span></div>
+    </div>
     <script src="countdown.js"></script>
 </body>
 </html>
