--- a/countdown.html
+++ b/countdown.html
@@ -7,8 +7,8 @@
 </head>
 <body>
     <div class="countdown-container">
-        <div class="event-end-time">活动结束时间: <span id="endTime">您的浏览器似乎不太支持</span></div>
-        <div class="time-left">距离活动结束还有: <span id="timeLeft">您的浏览器似乎不太支持</span></div>
+        <div class="event-end-time">活动时间: <span id="startTime">您的浏览器似乎不太支持</span> - <span id="endTime">您的浏览器似乎不太支持</span></div>
+        <div class="time-left">距离结束: <span id="timeLeft">您的浏览器似乎不太支持</span></div>
     </div>
     <script src="countdown.js"></script>
 </body>
