--- a/countdown.html
+++ b/countdown.html
@@ -7,7 +7,9 @@
 </head>
 <body>
     <div class="countdown-container">
-        <div class="event-end-time">活动时间: <span id="startTime">您的浏览器似乎不太支持</span> - <span id="endTime">您的浏览器似乎不太支持</span></div>
+        <div class="event-end-time" title="提示：已转换至本地时间，原本时间为2024年2月26日0时至2024年3月01日24时[+8时区/24小时制]">
+            活动时间: <span id="startTime">您的浏览器似乎不太支持</span> - <span id="endTime">您的浏览器似乎不太支持</span>
+        </div>
         <div class="time-left">距离结束: <span id="timeLeft">您的浏览器似乎不太支持</span></div>
     </div>
     <script src="countdown.js"></script>
