--- a/countdown.html
+++ b/countdown.html
@@ -13,7 +13,7 @@
         <div class="event-end-time" title="提示：已转换至本地时间，原本时间为2024年3月14日24时[+8时区/24小时制]">
             <span id="endTime">2024年3月14日24时[+8时区/24小时制]</span>
         </div>
-        <div class="time-left">
+        <div class="event-end-time">
             <span id="timeLeft">您的浏览器似乎不太支持</span>
         </div>
     </div>
