--- a/background.html
+++ b/background.html
@@ -46,7 +46,7 @@ body, html {
 
 </style>
 <div class="parallax-container">
-    <div class="parallax-background" style="background-image: url('your-background-image-url.jpg');"></div>
+    <div class="parallax-background" style="background-image: url('https://img.ts-dm.net/images/2024/03/02/116056256_p0.png');"></div>
 </div>
 
 <div class="content">
@@ -55,7 +55,7 @@ body, html {
 </div>
 
 <div class="parallax-container">
-    <div class="parallax-background" style="background-image: url('your-background-image-url.jpg');"></div>
+    <div class="parallax-background" style="background-image: url('https://img.ts-dm.net/images/2024/03/02/116458416_p0.jpg');"></div>
 </div>
 
 </body>
