--- a/countdown.html
+++ b/countdown.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <title>活动倒计时</title>
-    <link rel="stylesheet" href="countdown.css">
+    <link rel="stylesheet" href="./Style/countdown.css">
 </head>
 <body>
     <div class="countdown-container">
@@ -17,6 +17,6 @@
             <span id="timeLeft">您的浏览器似乎不太支持</span>
         </div>
     </div>
-    <script src="countdown.js"></script>
+    <script src="./Script/countdown.js"></script>
 </body>
 </html>
