--- a/countdown_end.html
+++ b/countdown_end.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <title>活动倒计时</title>
-    <link rel="stylesheet" href="countdown.css">
+    <link rel="stylesheet" href="./Style/countdown.css">
 </head>
 <body>
     <div class="countdown-container">
