--- a/player.html
+++ b/player.html
@@ -1,3 +1,4 @@
+<link rel="stylesheet" href="./APlayer/APlayer.css">
 <div id="aplayer"></div>
 <script src="./APlayer/APlayer.min.js"></script>
 <script src="./Script/player.js"></script>
