--- a/player.html
+++ b/player.html
@@ -1,5 +1,8 @@
 <link rel="stylesheet" href="./APlayer/APlayer.css">
-<div id="aplayer"></div>
+<link rel="stylesheet" href="./Style/countdown.css">
+<div class="countdown-container">
+    <div id="aplayer"></div>
+</div>
 <script src="./APlayer/APlayer.min.js"></script>
 <script src="./Script/player.js"></script>
 
