--- a/countdown.html
+++ b/countdown.html
@@ -7,14 +7,14 @@
 </head>
 <body>
     <div class="countdown-container">
-        <div class="event-end-time" title="提示：已转换至本地时间，原本时间为2024年4月01日0时[+8时区/24小时制]">
-            <span id="startTime">2024年4月01日0时[+8时区/24小时制]</span>
+        <div class="event-end-time" title="提示：需要JavaScript支持">
+            <span id="startTime">您的浏览器似乎不太支持</span>
         </div>
-        <div class="event-end-time" title="提示：已转换至本地时间，原本时间为2024年4月30日24时[+8时区/24小时制]">
-            <span id="endTime">2024年4月30日24时[+8时区/24小时制]</span>
+        <div class="event-end-time" title="提示：需要JavaScript支持">
+            <span id="endTime">需要JavaScript支持</span>
         </div>
         <div class="event-end-time">
-            <span id="timeLeft">您的浏览器似乎不太支持</span>
+            <span id="timeLeft">请联系我修复</span>
         </div>
     </div>
     <script src="./Script/countdown.js"></script>
